// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Products actions Get Products  success action 1`] = `
Object {
  "payload": Object {
    "data": Array [
      Object {
        "cost": 186,
        "customerPrice": 199,
        "id": 1,
        "name": "Soup",
      },
      Object {
        "cost": 21,
        "customerPrice": 87,
        "id": 2,
        "name": "Bread",
      },
      Object {
        "cost": 234,
        "customerPrice": 275,
        "id": 3,
        "name": "Cheese",
      },
      Object {
        "cost": 61,
        "customerPrice": 67,
        "id": 4,
        "name": "Milk",
      },
    ],
  },
  "type": "GET_PRODUCTS_SUCCESS",
}
`;

exports[`Products actions Get Products failure action 1`] = `
Object {
  "type": "GET_PRODUCTS_FAILURE",
}
`;

exports[`Products actions Get Products request action 1`] = `
Object {
  "type": "GET_PRODUCTS_REQUEST",
}
`;
